--- a/index.css
+++ b/index.css
@@ -2,35 +2,282 @@
 	margin: 0;
 	padding: 0;
 }
-.wrap {
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+
+.body {
+    box-sizing: border-box;
 }
 
 .header {
-    background-color:  #D9D9D9;
+    width: 100%;
+    background-color: #D9D9D9;
+    height: 101px;
+    margin-bottom: 40px;
+    /* max-width: 1440px;
+    margin: 0 auto; */
 }
 
-.header-wrap {
-    max-width: 1440px;
-    margin: 0 auto;
-	display: flex;
-    justify-content: center;
-	height: 101px;
-    background-color: red;
+.aside {
+    width: 203px;
+    height: 1302px;
+    background-color:  #D9D9D9;
+    position: absolute;
 }
 
 .main {
-   display: flex;
-    
+    display: flex;
+    flex-direction: column;
+    max-width: 1022px;
+    padding-left: 290px;
+    margin: 0 auto;
+    padding-right: 130px;
 }
+
+.article {
+    display: flex;
+    flex-direction: column;
+}
+
+.article__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.article-text {
+    margin-bottom: 30px;
+    width: 487px;
+    height: 61px;
+    background-color: #D9D9D9;
+}
+
+.article__bottom {
+    background-color: #D9D9D9;
+    height: 168px;
+}
+
+.hr {
+    height: 3px;
+    background-color: #D9D9D9;
+    border: 0 solid #D9D9D9;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.commentSystem__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    margin-bottom: 32px;
+}
+
+.commentSystem__title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: black; 
+    cursor: pointer;
+}
+
+.commentSystem__count {
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.commentSystem__hr {
+    width: 190px;
+    height: 3px;
+    background-color: black;
+    border: 0 solid black;
+    margin-top: 5px;
+}
+
+.commentSystem__filter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 60%;
+}
+
+ .dropdown__filter {
+    position: relative;
+    margin-right: 20px;
+    min-width: 210px;
+}
+
+.dropdown__select svg, .filter__favorite svg {
+    margin-left: 7px;
+}
+
+ .dropdown__item {
+    list-style-type: none;
+}
+
+.dropdown__filter:hover .dropdown__select {
+    opacity: 1;
+
+    transition: opacity ease-in-out 0.2s; 
+}
+
+.filter__favorite:hover {
+    opacity: 1;
+}
+
+.dropdown__select, .filter__favorite {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-decoration-line: underline;
+    color:rgba(0, 0, 0, 0.4);
+
+    transition: opacity ease-in-out 0.2s;
+}
+
+li {
+    display: block;
+}
+
+.dropdown__list {
+    position: absolute;
+    top: 28px;
+    padding: 10px 16px 5px 30px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    z-index: 1000;
+    min-width: 188px;
+}
+
+.dropdown__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    cursor: pointer;
+
+    transition: opacity ease-in-out 0.2s;
+
+    position: relative;
+}
+
+.dropdown__item span {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color:rgba(0, 0, 0, 0.4);
+}
+
+.dropdown__item:hover span {
+    opacity: 1;
+
+    transition: opacity ease-in-out 0.2s;
+}
+
+.dropdown__item svg {
+    position: absolute;
+    left: -26px;
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Медиа-запрос для адаптивности – когда ширина
   экрана 320px или меньше, высота шапки будет 68px */
 
 @media screen and (max-width : 320px)  {
+
     .header-wrap {
         height: 68px;
     }
+
+    .wrap {
+        max-width: 320px;  
+    }
+    
+    .content-wrap {
+        width: 300px;
+        margin-left: 0;
+        height: 100%;
+    }
+
+    .article__top {
+        margin-bottom: 0;
+    }
+
+    .article__top-right {
+        display: none;
+    }
+
+    .article-size {
+        width: 300px;
+        height: 61px;
+    }
+
+    .article-text {
+        margin-bottom: 20px;
+    }
+
+    .article-bottom {
+        height: 132px;
+    }
+
+    .aside {
+        display: none;
+    }
+
+    .main-wrap {
+        padding-top: 30px;
+        justify-content: center;
+    }
+
+    .article-text0 {
+        display: none;
+    }
+
+    .hr {
+        height: 2px;
+        margin-top: 30px;
+        margin-bottom: 13px;
+    }
+
+    .comments-filters__item {
+        margin-right: 25px;
+    }
+
+    .comments-filters__item a {
+        font-size: 14px;
+        line-height: 17px;
+    }
+
 }
