--- a/index.css
+++ b/index.css
@@ -189,7 +189,283 @@ li {
 
 .commentSystem__user {
     display: flex;
+    margin-bottom: 40px;
 }
+
+.user__info {
+    margin-left: 30px;
+    flex-grow: 1;
+}
+
+.user__title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    max-width: 688px;
+    margin-right: 25%;
+}
+
+.user__name {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #122AC0;
+}
+
+.user__maxNumb {
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.user__form {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.user__text {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    padding: 20px 10px 0 30px;
+    resize: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: black;
+    display: inline-block;
+    min-width: 70%;
+}
+
+.user__text::placeholder {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.user__button {
+   display: block; 
+   width: 100%;
+   margin-left: 30px;
+   background: #ABD873;
+   border-radius: 5px;
+   border: none;
+   cursor: pointer;
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 22px;
+   color: black;
+   max-height: 61px;
+   transition: background-color ease-in-out 0.2s;
+}
+
+.user__button:hover {
+    background-color:  #b2e76f;
+    transition: background-color ease 0.1s;
+}
+
+--disable {
+    background-color: #A2A2A2;
+}
+
+.--disable:hover {
+    cursor: auto;
+    background-color: #A1A1A1;
+} 
+
+.user__maxMessage {
+    position: absolute;
+    top: -38px;
+    right: 4px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FF0000;
+    max-width: 22px;
+    text-align: center;
+    display: none;
+}
+
+.comments__comment {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.comments__info {
+    margin-left: 30px;
+}
+
+.comments__title {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 10px;
+}
+
+.comments__name {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #122AC0;
+    margin-right: 15px;
+}
+
+.comments__time {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.comments__text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: black;
+    margin-bottom: 15px;
+}
+
+.comments__buttons {
+    display: flex;
+}
+
+.comments__btnAnswer, .comments__btnSelected {
+    display: flex;
+    align-items: center;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.4);
+    margin-right: 19px;
+    cursor: pointer;
+    transition: opacity ease 0.1s;
+}
+
+.comments__btnAnswer svg {
+    margin-right: 3px;
+}
+
+.comments__btnSelected svg {
+    margin-right: 8px;
+}
+
+.comments__btnAnswer:hover {
+    transition: opacity ease 0.1s;
+    opacity: 1;
+}
+
+.comments__btnSelected:hover {
+    transition: opacity ease 0.1s;
+    opacity: 1;
+}
+
+.comments__rating {
+    display: flex;
+}
+
+.minus, .plus {
+    display: block;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 11px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition:  ease 0.1s;
+}
+
+.minus {
+    color: #FF0000;
+    margin-right: 10px;
+}
+
+.plus {
+    margin-left: 10px;
+    color: #8AC540;
+}
+
+.rating {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.comments__answer {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 90px;
+    margin-bottom: 30px;
+}
+
+.comments__reply {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: rgba(0, 0, 0, 0.4);
+
+}
+
+.comments__reply svg {
+    margin-right: 13px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
