--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 }
 
 .header {
-    width: 100%;
+    max-width: 100%;
     background-color: #D9D9D9;
     height: 101px;
     margin-bottom: 40px;
@@ -18,14 +18,16 @@
 
 .aside {
     width: 203px;
-    height: 1302px;
     background-color:  #D9D9D9;
     position: absolute;
+    top: 140px;
+    left: 0;
+    min-height: 160%;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     max-width: 1022px;
     padding-left: 290px;
     margin: 0 auto;
@@ -61,6 +63,10 @@
     border: 0 solid #D9D9D9;
     margin-top: 40px;
     margin-bottom: 20px;
+}
+
+.commentSystem {
+    position: relative;
 }
 
 .commentSystem__header {
@@ -106,25 +112,37 @@
     min-width: 210px;
 }
 
-.dropdown__select svg, .filter__favorite svg {
-    margin-left: 7px;
+.dropdown__select {
+    display: flex;
+    align-items: center;
 }
 
- .dropdown__item {
-    list-style-type: none;
+.dropdown__btn {
+    display: block;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    margin-left: 9px;
+    padding-top: 5px;
+    rotate: 0deg;
 }
 
-.dropdown__filter:hover .dropdown__select {
+.dropdown__btn svg path {
+    transition: opacity ease 0.1s;
+}
+
+.dropdown__btn:hover svg path {
+    transition: opacity ease 0.1s;
+    opacity: 0.6;
+}
+
+
+.dropdown__span:hover {
+    transition: opacity ease 0.1s;
     opacity: 1;
-
-    transition: opacity ease-in-out 0.2s; 
 }
 
-.filter__favorite:hover {
-    opacity: 1;
-}
-
-.dropdown__select, .filter__favorite {
+.dropdown__span, .filter__favorite {
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -137,8 +155,24 @@
     text-decoration-line: underline;
     color:rgba(0, 0, 0, 0.4);
 
-    transition: opacity ease-in-out 0.2s;
+    transition: opacity ease 0.1s;
 }
+
+
+.filter__favorite svg {
+    z-index: -1;
+    margin-left: 7px;
+}
+
+.filter__favorite_active {
+    opacity: 1;
+}
+
+.filter__favorite:hover {
+    opacity: 1;
+}
+
+
 
 li {
     display: block;
@@ -153,6 +187,7 @@ li {
     border-radius: 5px;
     z-index: 1000;
     min-width: 188px;
+    display: none;
 }
 
 .dropdown__item {
@@ -160,8 +195,8 @@ li {
     align-items: center;
     margin-bottom: 5px;
     cursor: pointer;
-
-    transition: opacity ease-in-out 0.2s;
+    list-style-type: none;
+    transition: opacity ease 0.1s;
 
     position: relative;
 }
@@ -175,17 +210,18 @@ li {
     color:rgba(0, 0, 0, 0.4);
 }
 
-.dropdown__item:hover span {
-    opacity: 1;
-
-    transition: opacity ease-in-out 0.2s;
-}
-
 .dropdown__item svg {
     position: absolute;
     left: -26px;
     display: none;
+    z-index: -1;
 }
+
+.dropdown__item:hover span {
+    opacity: 1;
+    transition: opacity ease 0.1s;
+}
+
 
 .commentSystem__user {
     display: flex;
@@ -235,7 +271,7 @@ li {
     border-radius: 5px;
     outline: none;
     border: none;
-    padding: 20px 10px 0 30px;
+    padding: 20px 10px 25px 30px;
     resize: none;
     font-family: 'Inter';
     font-style: normal;
@@ -271,7 +307,7 @@ li {
    line-height: 22px;
    color: black;
    max-height: 61px;
-   transition: background-color ease-in-out 0.2s;
+   transition: background-color ease 0.1s;
 }
 
 .user__button:hover {
@@ -279,8 +315,8 @@ li {
     transition: background-color ease 0.1s;
 }
 
---disable {
-    background-color: #A2A2A2;
+.--disable {
+    background-color: #A1A1A1;
 }
 
 .--disable:hover {
@@ -328,6 +364,19 @@ li {
     margin-right: 15px;
 }
 
+.comments__prenickname {
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+    color: rgba(0, 0, 0, 0.4);
+    font-family: 'Inter';
+    font-size: 18px;
+}
+
+.comments__prenickname svg {
+    margin-right: 15px;
+}
+
 .comments__time {
     font-family: 'Inter';
     font-style: normal;
@@ -349,6 +398,10 @@ li {
 
 .comments__buttons {
     display: flex;
+}
+
+.commentBlock__reply {
+    margin-left: 100px;
 }
 
 .comments__btnAnswer, .comments__btnSelected {
@@ -416,12 +469,28 @@ li {
     color: #8AC540;
 }
 
+.plus:hover,
+.minus:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    transition:  ease 0.1s;
+}
+
 .rating {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
+}
+
+.plus_disable {
+    background-color: rgba(0, 0, 0, 0.05);
+    color: #d6ebbc;
+}
+
+.minus_disable {
+    background-color: rgba(0, 0, 0, 0.05);
+    color: #f59191;
 }
 
 .comments__answer {
@@ -446,6 +515,132 @@ li {
 
 .comments__reply svg {
     margin-right: 13px;
+}
+
+.likeCounter{
+    font-family: 'Inter';
+
+    font-weight: 500;
+    font-size: 18px;
+}
+
+
+@media (max-width: 400px) {
+
+    .header {
+        max-height: 68px;
+        margin-bottom: 30px;
+       
+    }
+    
+    .article__top-right {
+        display: none;
+
+    }
+
+    .article-text0 {
+        display: none;
+    }
+
+    .article-text {
+        width: 300px;
+        margin-bottom: 20px;
+    }
+
+    .aside {
+        display: none;
+        
+    }
+
+    .article__bottom {
+        height: 132px;
+        width: 300px;
+    }
+    
+    .article__top {
+        margin-bottom: 0;
+    }
+
+    .hr {
+        margin-top: 30px;
+        margin-bottom: 13px;
+        width: 300px;
+    }
+
+    .main {
+        padding-left: 0;
+        margin: 50px;
+    }
+    
+    .commentSystem__hr {
+        width: 171px;
+    }
+
+    .commentSystem__header {
+        flex-wrap: wrap;
+    }
+
+    .dropdown__span, filter__favorite {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+    }
+    
+    .commentSystem__filter {
+        align-items: flex-end
+    }
+
+    .foto {
+        width: 50px;
+        height: 50px;
+        margin-top: -10px;
+    }
+    
+    .user__form {
+        flex-direction: column;
+    }
+
+    .user__maxNumb {
+        font-size: 10px;
+        line-height: 12px;
+    }
+
+    .dropdown__filter {
+        margin-right: 5px;
+        min-width: 185px;
+        margin-top: 20px;
+    }
+
+    .dropdown__select {
+        font-size: 14px;
+    }
+
+    .filter__favorite {
+        font-size: 14px;
+    }
+
+    .comments__btnAnswer,
+    .comments__btnSelected {
+        font-size: 16px;
+        margin-right: 10px;
+        padding: 0;
+    }
+
+    .user__text {
+        margin-top: 20px;
+    }
+
+    .comments__prenickname {
+        margin-top: 5px;
+    }
+
+    .commentSystem__user {
+        display: block;
+        position: relative;
+    }
+
+
 }
 
 
